force-app/main/default/objects/Aditivo_do_Contrato_de_Compra__c/Aditivo_do_Contrato_de_Compra__c.object-meta.xml
<CustomObject>
    <label>Aditivo do Contrato de Compra</label>
    <nameField>
        <label>Nº</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Aditivos do Contrato de Compra</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>