force-app/main/default/objects/Aditivo_do_Contrato_de_Compra__c/fields/Contrato_de_Compra__c.field-meta.xml
<CustomField>
    <fullName>Contrato_de_Compra__c</fullName>
    <label>Contrato de Compra</label>
    <referenceTo>Contrato_de_compra__c</referenceTo>
    <relationshipLabel>Aditivos do Contrato</relationshipLabel>
    <relationshipName>Aditivos_do_Contrato_de_Compra</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>