force-app/main/default/objects/Aditivo_do_Contrato_de_Compra__c/fields/Fase__c.field-meta.xml
<CustomField>
    <fullName>Fase__c</fullName>
    <label>Fase</label>
    <length>255</length>
    <type>Text</type>
</CustomField>