force-app/main/default/objects/Aditivo_do_Contrato_de_Compra__c/fields/idDocAutentique__c.field-meta.xml
<CustomField>
    <fullName>idDocAutentique__c</fullName>
    <label>ID do documento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>