force-app/main/default/objects/Aditivo_do_Contrato_de_Compra__c/fields/Inicio_da_vigencia__c.field-meta.xml
<CustomField>
    <fullName>Inicio_da_vigencia__c</fullName>
    <label>Início da vigência</label>
    <type>Date</type>
</CustomField>