force-app/main/default/objects/Aditivo_do_Contrato_de_Compra__c/fields/qtdMeses__c.field-meta.xml
<CustomField>
    <fullName>qtdMeses__c</fullName>
    <formula>( Novo_termino_do_contrato__c -  Inicio_da_vigencia__c  ) / 30.43685</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>qtdMeses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>