force-app/main/default/objects/Aditivo_do_Contrato_de_Compra__c/fields/StatusAssinatura__c.field-meta.xml
<CustomField>
    <fullName>StatusAssinatura__c</fullName>
    <formula>IF(idDocAutentique__c == null, &apos;Não enviado&apos;, IF(Fase__c == &apos;1&apos;, &apos;Assinatura do prestador&apos;, IF(Fase__c == &apos;2&apos;, &apos;Aprovação jurídica&apos;, IF(Fase__c == &apos;3&apos;, &apos;Assinatura do administrador&apos;, IF(Fase__c == &apos;null&apos;, &apos;Assinaturas finalizadas&apos;, &apos;&apos;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status da Assinatura</label>
    <type>Text</type>
</CustomField>