force-app/main/default/objects/Aditivo_do_Contrato_de_Compra__c/fields/Valor_adicionado_ao_contrato__c.field-meta.xml
<CustomField>
    <fullName>Valor_adicionado_ao_contrato__c</fullName>
    <label>Novo valor do contrato</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>